--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Nunito+Sans:400,700,900");
 /* ==========================================================================
    Gobal Styles
    ========================================================================== */
@@ -6,17 +5,51 @@
    Google Font Loader
    ========================================================================== */
 /* ==========================================================================
-   Common Styles
+   Common Styles 2583ff
    ========================================================================== */
-body {
-  font-family: "Nunito Sans", sans-serif;
-  font-weight: 400;
-  font-size: 13px;
-  line-height: 24px;
-  overflow-x: hidden;
-  /* fixing the overflow duting animation */
-  color: #444;
+
+
+   /*   App theme color */
+
+   .text-app {
+    color: #2583ff!important;
 }
+
+   .btn-app{
+    color: #fff;
+    background-color: #2583ff;
+    border-color: #2583ff;
+   }
+
+   .btn-app:hover {
+    color: #fff;
+    background-color: #0069d9;
+    border-color: #0062cc;
+}
+
+   .btn-outline-app{
+    color: #2583ff;
+    background-color: transparent;
+    background-image: none;
+    border-color: #2583ff;
+   }
+
+   .btn-outline-app:hover {
+    color: #fff;
+    background-color: #2583ff;
+    border-color: #2583ff;
+}
+
+
+.border-app {
+  border-color: #2583ff!important;
+}
+
+
+.card-hover:hover{
+  border-color: #343a40;
+}
+
 h1,
 h2,
 h3,
@@ -83,17 +116,7 @@ a:focus {
   background: #2583ff;
   color: #fff;
 }
-.btn {
-  padding: 12px 30px;
-  color: #fff;
-  position: relative;
-  -webkit-transition: all 0.3s linear;
-  -moz-transition: all 0.3s linear;
-  -ms-transition: all 0.3s linear;
-  -o-transition: all 0.3s linear;
-  transition: all 0.3s linear;
-  border: none;
-}
+
 .btn-common:hover,
 .btn-common:focus {
   color: #fff;
@@ -1212,7 +1235,6 @@ label {
 footer .block-title {
   font-size: 24px;
   letter-spacing: 1px;
-  font-weight: 900;
   margin-bottom: 30px;
 }
 footer .footer-Content {
@@ -2817,6 +2839,7 @@ blockquote p a:hover {
   display: block;
   color: #888;
 }
+/*
 .form-control {
   background-color: #fff;
   border: 1px solid #ddd;
@@ -2831,7 +2854,7 @@ blockquote p a:hover {
 .form-control:focus {
   box-shadow: none;
 }
-/* ==========================================================================
+ ==========================================================================
    .form-control, .form-group .form-control{
 	border: 0;
     background-image: linear-gradient(@preset, @preset,), linear-gradient(#D2D2D2, #D2D2D2);
